--- a/RegristroArticulos/RegristroArticulos.csproj
+++ b/RegristroArticulos/RegristroArticulos.csproj
@@ -61,6 +61,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\Consulta\ConsultaA.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Consulta\ConsultaA.Designer.cs">
+      <DependentUpon>ConsultaA.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\Regristro\RegristroA.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,9 @@
     <EmbeddedResource Include="RegristroArticulos.resx">
       <DependentUpon>RegristroArticulos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\Consulta\ConsultaA.resx">
+      <DependentUpon>ConsultaA.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\Regristro\RegristroA.resx">
       <DependentUpon>RegristroA.cs</DependentUpon>
     </EmbeddedResource>
@@ -95,9 +104,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UI\Colsuta\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="Resources\Edit_icon_%28the_Noun_Project_30184%29.svg.png" />
   </ItemGroup>
@@ -112,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DAL\Scripts\Scripts.sql" />
+    <None Include="Resources\novo-documento-pagina_318-28677.jpg" />
     <None Include="Resources\magnifying-glass-1976105_960_720.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
