--- a/RegristroArticulos/App.config
+++ b/RegristroArticulos/App.config
@@ -7,7 +7,7 @@
   <connectionStrings>
     <add name="ConStr"
          connectionString="Data Source = MARLEDIDR\SQLEXPRESS;
-         Initial Catalog=DBArticulos; Integrated Segurity=true"
+         Initial Catalog=DBArticulos; Integrated Security=true"
          providerName ="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
